<resources>
    <string name="app_name">Mine Sweeper</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="let_s_play">Let\'s Play!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="hard">Hard</string>
    <string name="create_a_custom_board">Create a Custom Board</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mines">Mines</string>
    <string name="select_width">Enter Width:</string>

    <string name="time">Time</string>
    <string name="restart">Restart</string>
</resources>