<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A6C40"
    android:backgroundTint="#FDF7F7"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_play"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minesweeper"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/select_difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#0B0B0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading"
        app:layout_constraintVertical_bias="0.05" />

    <RadioGroup
        android:id="@+id/Difficulty"
        android:layout_width="387dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/Easy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="false"
            android:text="@string/easy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/Medium"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/Hard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hard"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <RadioButton
            android:id="@+id/custom_board"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_a_custom_board"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </RadioGroup>

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/start"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:backgroundTintMode="multiply"
        android:text="Check Best Time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="407dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty"
        app:layout_constraintVertical_bias="0.372" />


</androidx.constraintlayout.widget.ConstraintLayout>